# Aviral

./: .gitattributes  .gitignore  README.md
apps/api/: README.md  pyproject.toml
apps/api/config/: feature_flags.yaml  generator.yaml  prohibited_features.yaml  rules.yaml
apps/api/src/idbi/: __init__.py
apps/api/tests/: test_governance.py  test_health.py  test_intelligence.py  test_synthesis.py
apps/web/src/: App.css  App.tsx  index.css  main.tsx
backend/: README.md  main.py  pyproject.toml
backend/config/: app.yaml  confidence.yaml  products.yaml
backend/idbi/: main.py
backend/idbi/api/v1/: __init__.py  governance.py  health.py  insights.py  learning.py
backend/idbi/config/: loader.py  settings.py
backend/idbi/domain/: __init__.py  decision.py  enums.py  insights.py  offer.py
backend/idbi/graph/: __init__.py  features.py  knowledge_graph.py
backend/idbi/ml/: dataset.py  metrics.py
backend/idbi/repositories/: __init__.py
backend/idbi/rules/: engine.py
backend/idbi/services/: consent_service.py  decision_service.py  model_service.py  pattern_service.py  population_service.py
backend/tests/: test_decision.py  test_insights.py  test_learning.py
docs/adr/: 0001-architecture.md
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/app/: ApplicantContext.tsx  CommandMenu.tsx  command.css  navigation.ts
frontend/src/design-system/: ApplicantPicker.tsx  Gauge.tsx  Tooltip.tsx  format.ts  tokens.css
frontend/src/lib/: api.ts  queries.ts
(+83 files in other folders)
